# bitwise

./: Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: bit_grid.rs  ieee754.rs  main.rs  number_repr_bitops.rs  plot.rs  special_values.rs
frontend/styles/: main.css
libs/bit_operations/: Cargo.toml
libs/bit_operations/src/: lib.rs
