[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7.5", features = ["csr"] }
bit_operations = { path = "../libs/bit_operations", features = ["wasm"] }
serde = { version = "1.0.217", features = ["derive"] }
web-sys = "0.3.77"
hex = "0.4.3"
once_cell = "1.20.2"
half = "2.4.1"